Updated weather UI and fixed humidity layout bug

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     justify-content: space-around;
     font-size:18px;
     color:#ebfffc;
-    margin:100px 0 0;
+    margin:30px 0 0;
 }
 .more_discrip p{
     display: flex;
